# strkit_rust_ext

./: .gitignore  Cargo.toml  README.md  pyproject.toml  strkit_rust_ext.pyi
.github/workflows/: CI.yml  build-release.yml
src/: lib.rs  strkit.rs
src/strkit/: aligned_coords.rs  base_mod.rs  call.rs  cigar.rs  consensus.rs  coords.rs  exceptions.rs  locus.rs  reads.rs  repeats.rs  snvs.rs  utils.rs
src/strkit/consensus/: best_representatives.rs  poa.rs
tests/: benchmark.py  cigar.py  common.py  test_aligned_coords.py  test_cigar.py  test_consensus.py  test_locus.py  test_mk_snvs.py  test_repeats.py  test_snvs.py  test_utils.py
