[package]
name = "strkit_rust_ext"
version = "0.27.0"
edition = "2024"
rust-version = "1.88.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "strkit_rust_ext"
crate-type = ["cdylib"]

[dependencies]
bio = "=2.2.0"
numpy = "0.28"
ndarray = "0.17"
# extension-module is needed:
#   https://pyo3.rs/v0.25.0/building-and-distribution#the-extension-module-feature
# generate-import-lib allows cross-compilation for Windows:
#   https://www.maturin.rs/distribution.html#cross-compile-to-windows
pyo3 = { version = "0.28.1", features = ["generate-import-lib"] }
bincode = { version = "2", features = ["serde"] }
bytecount = { version = "0.6.8", features = ["runtime-dispatch-simd"] }
# exclude curl from rust-htslib by turning off default features and putting back bzip2 + lzma for CRAMs
rust-htslib = { version = "1.0", default-features = false, features = ["bzip2", "lzma", "libdeflate"] }
serde = {version = "1.0", features = ["derive"] }
strsim = "0.11"
parasail-rs = "0.9.0"
once_cell = "1.21"
rust-lapper = "1.2.0"
regex = "1.12.2"
spoa_rs = { git = "https://github.com/davidlougheed/spoa-rs.git", rev = "0c433c7" }
# trlib = { git = "ssh://git@github.com/davidlougheed/trlib.git" }
smallvec = "1.15.1"
thiserror = "2.0.18"
rapidhash = { version = "4.4.1", features = ["unsafe"] } # unsafe is faster; why go slow?

[profile.release]
lto = true
