[build-system]
requires = ["maturin>=1.7.3,<1.8"]
build-backend = "maturin"

[project]
name = "strkit_rust_ext"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]
dynamic = ["version"]


[tool.maturin]
features = ["pyo3/extension-module"]
