[build-system]
requires = ["maturin>=1.9.6,<1.10"]
build-backend = "maturin"

[project]
name = "strkit_rust_ext"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]
dynamic = ["version"]


[tool.maturin]
features = ["pyo3/extension-module"]
